tests/compile/userdata_getter_extra_arg.stderr
error: field getter must not take additional arguments
 --> tests/compile/userdata_getter_extra_arg.rs:9:5
  |
9 |     fn x(&self, extra: u32) -> mlua::Result<u32> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
